--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="background-color:#e0e0e0">
 
 <div class=" container">
     <div class=" logo-block">
